@@ -189,17 +189,18 @@ class UCFunc
 
 		// temp passing UCData, probably shouldn't need it.
 		void output_ucs(ostream &o, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics, bool uselesscomment, bool gnubraces=false);
+		ostream &output_ucs_funcname(ostream &o, unsigned int funcid, unsigned int num_args, bool return_var);
 		void output_ucs_node(ostream &o, const FuncMap &funcmap, UCNode* ucn, const map<unsigned int, string> &intrinsics, unsigned int indent);
 		void output_ucs_data(ostream &o, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics, bool uselesscomment, unsigned int indent);
 		void output_ucs_opcode(ostream &o, const FuncMap &funcmap, const vector<UCOpcodeData> &optab, const UCc &op, const map<unsigned int, string> &intrinsics, unsigned int);
 		
 		void parse_ucs(const FuncMap &funcmap, const map<unsigned int, string> &intrinsics);
 		void parse_ucs_pass1(vector<UCNode *> &nodes);
-		void parse_ucs_pass1a(vector<UCNode *> &nodes);
-		void parse_ucs_pass2a(vector<GotoSet> &gotoset, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics);
-		vector<UCc *> parse_ucs_pass2b(vector<pair<UCc *, bool> >::reverse_iterator current,
+		void parse_ucs_pass2(vector<GotoSet> &gotoset, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics);
+		vector<UCc *> parse_ucs_pass2a(vector<pair<UCc *, bool> >::reverse_iterator current,
 		                               vector<pair<UCc *, bool> > &vec, unsigned int opsneeded,
 		                               const FuncMap &funcmap, const map<unsigned int, string> &intrinsics);
+		void parse_ucs_pass3(vector<GotoSet> &gotoset, const map<unsigned int, string> &intrinsics);
 
 //	private:
 	
@@ -221,7 +222,7 @@ class UCFunc
 		unsigned short _num_locals;  // the number of local variables
 		unsigned short _num_externs; // the number of external function id's
 		vector<unsigned short> _externs; // the external function id's
-		//vector<pair<unsigned short, pair<unsigned char, vector<unsigned char> > > > _usecode;
+		
 		vector<UCc> _opcodes;
 		
 		bool           _return_var; // does the function return a variable?
@@ -234,123 +235,6 @@ class UCFunc
 
 void readbin_UCFunc(ifstream &f, UCFunc &ucf);
 void print_asm(UCFunc &ucf, ostream &o, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics, const UCData &uc);
-
-/*class UCFunc
-{
-  public:
-    UCFunc() : _opcode_count(256, 0), _unknown_opcode_count(256, 0), _unknown_intrinsic_count(256, 0) {};
-    ~UCFunc();
-    void process_old(ifstream *f, long func, int* found,
-                          vector<unsigned char> &intrinsic_buf,
-                          bool scan_mode,
-                          unsigned long opcode,
-                          unsigned long intrinsic,
-                          unsigned int &uc_funcid,
-                          const char** func_table);
-    void process_data_seg();
-    void process_code_seg(vector<unsigned char> &intrinsic_buf, int mute,
-                          int count_all_opcodes,
-                          int count_all_intrinsic,
-                          const char** func_table);
-    unsigned short print_opcode(unsigned char* ptrc, unsigned short coffset,
-                            unsigned char* pdataseg,
-                            unsigned short* pextern,
-                            unsigned short externsize,
-                            vector<unsigned char> &intrinsic_buf,
-                            int mute,
-                            int count_all_opcodes,
-                            int count_all_intrinsic,
-                            const char** func_table);
-    unsigned short print_opcode_old(unsigned char* ptrc, unsigned short coffset,
-                            unsigned char* pdataseg,
-                            unsigned short* pextern,
-                            unsigned short externsize,
-                            vector<unsigned char> &intrinsic_buf,
-                            int mute,
-                            int count_all_opcodes,
-                            int count_all_intrinsic,
-                            const char** func_table);
-
-    //void genflags(const vector<UCc> &uc_codes);
-    const vector<FlagData *> &flags() const { return _flagcount; };
-
-    // LEGACY
-    const vector<UCc> &codes() const { return _codes; };
-
-    // temporary until it's removed from ucdump.cc
-    const vector<unsigned int> &externs() const { return _externs; };
-    const map<unsigned int, string, less<unsigned int> > &data() const
-             { return _data; };
-    unsigned int localc() const { return _localc; };
-    unsigned int argc() const { return _argc; };
-    unsigned short funcid() const { return _funcid; };
-    long offset() const { return _offset; };
-    unsigned short funcsize() const { return _funcsize; };
-    unsigned short datasize() const { return _datasize; };
-    unsigned short codesize() const { return _funcsize - _datasize; };
-
-//  private:
-    unsigned short read_ushort();
-    unsigned short read_ushort(const unsigned char *buff);
-    void read_vchars(char *buffer, const unsigned long nobytes);
-    void read_vbytes(unsigned char *buffer, const unsigned long nobytes);
-
-    // decompiling functions
-    void do_decompile();
-    void do_print();
-    void genflags();
-
-    void re_order();
-
-    void print_asm();
-    void print_asm_data();
-
-    void print_c_externs();
-    void print_c_head();
-    void print_c_local();
-    void print_c_body();
-    void print_c_tail();
-
-    string extern_tostr(const unsigned int uc_extern);
-    // /decompiling functions
-
-    // temp file manipulation functions
-		void fseekbeg(const streampos &pos) { _file->seekg(pos, ios::beg); };
-		void fseekcur(const streampos &pos) { _file->seekg(pos, ios::cur); };
-		streampos ftell() const { return _file->tellg(); };
-		
-    //int fseek(const long offset, const int mode) { return ::fseek(_file, offset, mode); };
-    bool eof() const { return _file->eof(); };
-    int get() { return _file->get(); };
-
-    // /temp file manipulation functions
-
-    unsigned short _funcid;
-    unsigned short _funcsize;
-    unsigned short _datasize;
-
-    unsigned int _argc; // number of function parameters
-    unsigned int _localc; // number of local variables
-
-    streampos      _offset;
-    long           _code_offset; // offset to start of code segment in file
-
-    ifstream *_file;
-
-    vector<FlagData *>   _flagcount;
-    vector<Opcode *>     _raw_opcodes;
-    vector<Label *>      _opcodes;
-    vector<unsigned int> _externs;
-    map<unsigned int, string, less<unsigned int> > _data;
-    vector<unsigned int> _opcode_count;
-
-    // currently not used
-    vector<unsigned int> _unknown_opcode_count;
-    vector<unsigned int> _unknown_intrinsic_count;
-
-    // LEGACY: remove when old c output format is unused
-    vector<UCc> _codes;
-};*/
 
 #endif
 
